argocd/tempo/manifests/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: conohav2-1.pstr.space
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    traefik.ingress.kubernetes.io/router.tls.options: tempo-tempo-mtls@kubernetescrd
spec:
  ingressClassName: traefik-external
  tls:
    - hosts:
        - "tempo.pstr.space"
      secretName: tempo.pstr.space-dns01
  rules:
    - host: "tempo.pstr.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo-gateway
                port:
                  number: 80
